force-app/main/default/objects/Charges__c/Charges__c.object-meta.xml
<CustomObject>
    <label>Charges</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Charges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>