force-app/main/default/objects/Charges__c/fields/Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>Branch_Office__c</fullName>
    <label>Branch Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>