force-app/main/default/objects/Charges__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>