force-app/main/default/objects/Charges__c/fields/Charge_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Charge_Percentage__c</fullName>
    <label>Charge Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>