force-app/main/default/objects/Charges__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charges</label>
    <referenceTo>Tax__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>