force-app/main/default/objects/Charges__c/fields/DC_Note__c.field-meta.xml
<CustomField>
    <fullName>DC_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DC Note</label>
    <referenceTo>DC_Note__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>