force-app/main/default/objects/Charges__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Note</label>
    <referenceTo>Sales_Order_Dispatch_Delivery_Note__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>