force-app/main/default/objects/Charges__c/fields/GST_MRN__c.field-meta.xml
<CustomField>
    <fullName>GST_MRN__c</fullName>
    <formula>GST__c * Charge_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST MRN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>