force-app/main/default/objects/Charges__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <label>IGST</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>