force-app/main/default/objects/Charges__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRN</label>
    <referenceTo>MRN__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>