force-app/main/default/objects/Charges__c/fields/MRN_Charge__c.field-meta.xml
<CustomField>
    <fullName>MRN_Charge__c</fullName>
    <formula>IF( AND( Total_Amount__c &gt; 0 , MRN__r.Exchange_Rate__c &gt; 0 ),(Total_Amount__c / MRN__r.Exchange_Rate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRN Charge %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>