force-app/main/default/objects/Charges__c/fields/MRN_Charge_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>MRN_Charge_Exchange_Rate__c</fullName>
    <formula>IF( AND( MRN__r.Total_Item_Amount__c &gt; 0, Total_Amount__c &gt; 0 , MRN__r.Exchange_Rate__c &gt; 0 ),((Total_Amount__c / MRN__r.Exchange_Rate__c) / MRN__r.Total_Item_Amount__c)*100 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRN Charge Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>