force-app/main/default/objects/Charges__c/fields/MRN_Charge_Percent__c.field-meta.xml
<CustomField>
    <fullName>MRN_Charge_Percent__c</fullName>
    <formula>if( ISPICKVAL( MRN__r.MRN_Delivery_Type__c , &apos;Import&apos;) , 
if(AND( MRN__r.Total_Item_Amount__c &gt; 0, Total_Amount__c &gt; 0 , MRN__r.Exchange_Rate__c &gt; 0 ),((Total_Amount__c / MRN__r.Exchange_Rate__c) / MRN__r.Total_Item_Amount__c) , 0),
if(AND( MRN__r.Total_Item_Amount__c &gt; 0, Total_Amount__c &gt; 0 ),(Total_Amount__c / MRN__r.Total_Item_Amount__c) , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRN Charge %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>