force-app/main/default/objects/Charges__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <formula>if( NOT( TEXT(MRN__r.MRN_Delivery_Type__c) == &apos;Import&apos; ),
Charge_Amount__c + CGST_Amount__c + SGST_Amount__c + IGST_Amount__c, GST_MRN__c + Charge_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>