force-app/main/default/objects/Charges__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <label>SGST</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>